--- a/frontend/index.html
+++ b/frontend/index.html
@@ -915,7 +915,7 @@
 // =========================================================================
 const MIC_SAMPLE_RATE    = 16000;
 const PLAYBACK_RATE      = 24000;
-const SCRIPT_BUFFER_SIZE = 4096;
+const SCRIPT_BUFFER_SIZE = 1024;  // ~64ms at 16kHz — keeps chunks under 100ms for low latency
 const VIDEO_INTERVAL_MS  = 333;   // ~3 FPS — makes visual grounding feel live
 const VIDEO_QUALITY      = 0.7;
 const VIDEO_WIDTH        = 640;
